# fbsim-cli

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yaml
ci/: release.sh
src/: cli.rs  game.rs  league.rs  main.rs
src/cli/: fbsim.rs  game.rs  league.rs  output.rs
src/cli/game/: drive.rs  play.rs  score.rs
src/cli/league/: season.rs  team.rs
src/cli/league/season/: conference.rs  playoffs.rs  schedule.rs  standings.rs  team.rs  week.rs
src/cli/league/season/conference/: division.rs
src/cli/league/season/playoffs/: round.rs
src/cli/league/season/team/: stats.rs
src/cli/league/season/week/: matchup.rs
src/cli/league/team/: stats.rs
src/game/: benchmark.rs  play.rs  sim.rs
src/game/drive/: sim.rs
src/game/play/: benchmark.rs  sim.rs
src/game/score/: benchmark.rs  sim.rs
src/league/: create.rs  season.rs  team.rs
src/league/season/: add.rs  conference.rs  create.rs  get.rs  list.rs  playoffs.rs  schedule.rs  sim.rs  standings.rs  team.rs  week.rs
src/league/season/conference/: add.rs  get.rs  list.rs
src/league/season/conference/division/: add.rs  get.rs  list.rs
src/league/season/playoffs/: display.rs  gen.rs  get.rs  picture.rs  round.rs  sim.rs
src/league/season/playoffs/round/: display.rs  get.rs  matchup.rs  sim.rs
src/league/season/team/: add.rs  assign.rs  get.rs  list.rs
src/league/season/team/stats/: passing.rs  rushing.rs  (+1 more)
src/league/season/week/: get.rs  list.rs  matchup.rs  sim.rs
src/league/team/: add.rs  create.rs  get.rs  list.rs  stats.rs
src/league/team/stats/: passing.rs  receiving.rs  rushing.rs
(+7 files in other folders)
