[package]
name = "fbsim-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fbsim"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
fbsim-core = "1.0.0-alpha.1"
rand = "0.8.5"
serde_json = "1.0.134"
