[package]
name = "fbsim-cli"
version = "1.0.0-alpha.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fbsim"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
fbsim-core = { git = "https://github.com/whatsacomputertho/fbsim-core.git", branch = "main" }
indicatif = "0.17.11"
rand = "0.8.5"
serde_json = "1.0.134"
statrs = "0.18.0"
tabwriter = "1.4.1"
